fixed all spacing issues

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -64,7 +64,7 @@
 
 /* styling column widths */
 .twelve-columns {
-  width: 30%;
+  width: 100%;
   
 }
 
